--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,30 +2,28 @@ version: "3.6"
 services:
 
   javamicroservice:
-    build:
-      context: ./..
-      args:
-      - JAR_FILE=./build/libs/javamicroservice.jar
+    image: java-ms
+    container_name: javamicroservice
     ports:
-    - "8080:8080"
+      - "8080:8080"
 
   filebeat:
     image: docker.elastic.co/beats/filebeat:6.5.1
     container_name: filebeat
     user: root
     volumes:
-    - "./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml"
-    - "/var/lib/docker/containers/:/var/lib/docker/containers/:ro"
-    - "/var/run/docker.sock:/var/run/docker.sock"
+      - "./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml"
+      - "/var/lib/docker/containers/:/var/lib/docker/containers/:ro"
+      - "/var/run/docker.sock:/var/run/docker.sock"
 
-# metricbeat:
-#   image: docker.elastic.co/beats/metricbeat:6.5.1
-#   container_name: metricbeat
-#   user: root
-#   volumes:
-#     - "./metricbeat/file.yml:/usr/share/metricbeat/metricbeat.yml"
-#     - "/var/lib/docker/containers/:/var/lib/docker/containers/:ro"
-#     - "/var/run/docker.sock:/var/run/docker.sock"
-#     - "/sys/fs/cgroup:/hostfs/sys/fs/cgroup:ro"
-#     - "/proc:/hostfs/proc:ro"
-#     - "/:/hostfs:ro"
+  metricbeat:
+    image: docker.elastic.co/beats/metricbeat:6.5.1
+    container_name: metricbeat
+    user: root
+    volumes:
+      - "./metricbeat/metricbeat.yml:/usr/share/metricbeat/metricbeat.yml"
+      - "/var/lib/docker/containers/:/var/lib/docker/containers/:ro"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "/sys/fs/cgroup:/hostfs/sys/fs/cgroup:ro"
+      - "/proc:/hostfs/proc:ro"
+      - "/:/hostfs:ro"
